--- a/sorted list/makefile
+++ b/sorted list/makefile
@@ -3,28 +3,24 @@
 # Makes an executable called sl that runs main.c, compiles sorted list files into a library
 
 CC = gcc
-CFLAGS = -Wall -g -o
-# LFLAGS = -L
-OUTPUT = sl
-EXEOBJ = main.o
-LIBOBJ = sorted-list.o
-LIBSL = libsl.a
-all: $(OUTPUT)
+CFLAGS = -Wall -g
+OUTPUT = ./sl
+EXEOBJ = ./main.o
+LIBOBJ = ./sorted-list.o
+LIBSL = ./libsl.a
+HEADERS = ./*.h
+default: $(OUTPUT)
+all: default
 
-# %.o: %.c
-# 	$(CC) $(CFLAGS) -c $< -o $@
-
-sorted-list.o : sorted-list.c
-	$(CC) $(CFLAGS) -c sorted-list.c -o $(LIBOBJ)
-
-main.o : main.c
-	$(CC) $(CFLAGS) -c main.c -o $(EXEOBJ)
+%.o: %.c
+	$(CC) $(CFLAGS) -c $< -o $@
 
 $(LIBSL): $(LIBOBJ)
 	ar rc $(LIBSL) $(LIBOBJ)
 
 $(OUTPUT): $(EXEOBJ) $(LIBSL)
-	$(CC) $(CFLAGS) $(EXEOBJ) $(LIBSL) -o $(OUTPUT)
+	$(CC) $(CFLAGS) $(EXEOBJ) $(LIBSL) sorted-list.h -o $@
 
 clean:
-	rm *.o $(OUTPUT)
+	rm -f *.o $(OUTPUT)
+	rm -f $(LIBSL)
